image-service/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
  namespace: images-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - image-service
            topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: regcred
      containers:
        - name: image-service
          image: majdeldin7/image-service:v1
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /live
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "600m"
              memory: "512Mi"
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 100
