image-service/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service
  namespace: image-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: image-service
  type: ClusterIP
